fix logos alignment

--- a/assets/main.css
+++ b/assets/main.css
@@ -15,6 +15,15 @@
 
 @import url('https://fonts.googleapis.com/css?family=Roboto%7CRoboto+Slab');
 
+#sponsorsID{
+    height: 10vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-left:  50px;
+    margin-right:  100px;    
+}
+
 *{
     border:0;
     font:inherit;
